joomla-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: joomla-pod
  labels:
    app: cms
    name: joomla-pod
spec:
  containers:
  - name: joomla
    image: joomla:latest
    ports:
    - containerPort: 80
