wordpress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-pod
  labels:
    app: cms
    name: wordpress-pod
spec:
  containers:
  - name: wordpress
    image: wordpress:latest
    ports:
    - containerPort: 80
