argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
#    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
#    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/rewrite-target: /
    argocd.argoproj.io/wave: "1" 
spec:
  tls:
  - hosts:
    - argosid.crabdance.com
    secretName: argocd-tls
  ingressClassName: traefik
  rules:
  - host: argosid.crabdance.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
